--- a/src/main/resources/templates/product/update.html
+++ b/src/main/resources/templates/product/update.html
@@ -11,7 +11,7 @@
 
     <!-- seo -->
     <meta name="keywords" content="html5,css3,js,jquery,bootstrap,react,javase" />
-    <meta name="description" content="Customer List" />
+    <meta name="description" content="product List" />
     <meta name="author" content="Hamit Mızrak" />
 
     <!-- font-awesome -->
@@ -47,36 +47,31 @@
 <!-- start codes -->
 <h1 class="text-primary">Müşteri Güncellemesi</h1>
 
-<form th:action="@{/customer/mvc/v1/update/{id}(id=${key_customer_update.getId()})}" th:method="post" th:object="${key_customer_update}">
+<form th:action="@{/product/mvc/v1/update/{id}(id=${key_product_update.getId()})}" th:method="post" th:object="${key_product_update}">
 
     <div class="form-group mb-4">
-        <label for="customerName">Müşteri Adınız</label>
-        <input type="text" class="form-control" th:field="*{customerName}"  autofocus="true" placeholder="Müşteri adınız" id="customerName" name="customerName"/>
-        <div class="text-danger" th:if="${#fields.hasErrors('customerName')}" th:errors="*{customerName}"></div>
+        <label for="productName">Ürün Adı</label>
+        <input type="text" class="form-control" th:field="*{productName}"  autofocus="true" placeholder="Ürün adını" id="productName" name="productName"/>
+        <div class="text-danger" th:if="${#fields.hasErrors('productName')}" th:errors="*{productName}"></div>
     </div>
 
     <div class="form-group mb-4">
-        <label for="customerSurname">Müşteri Soyadınız</label>
-        <input type="text" class="form-control" th:field="*{customerSurname}" autofocus="false" placeholder="Müşteri soyadınız" id="customerSurname" name="customerSurname"/>
-        <div class="text-danger" th:if="${#fields.hasErrors('customerSurname')}" th:errors="*{customerSurname}"></div>
+        <label for="productPrice">Ürün Fiyatı</label>
+        <input type="text" class="form-control" th:field="*{productPrice}" autofocus="false" placeholder="Ürün Fiyatı" id="productPrice" name="productPrice"/>
+        <div class="text-danger" th:if="${#fields.hasErrors('productPrice')}" th:errors="*{productPrice}"></div>
     </div>
 
     <div class="form-group mb-4">
-        <label for="customerEmail">Müşteri Emaliniz</label>
-        <input type="text" class="form-control" th:field="*{customerEmail}"  autofocus="false" placeholder="Müşteri emailiniz" id="customerEmail" name="customerEmail"/>
-        <div class="text-danger" th:if="${#fields.hasErrors('customerEmail')}" th:errors="*{customerEmail}"></div>
+        <label for="productQuantify">Ürün Ölçü</label>
+        <input type="text" class="form-control" th:field="*{productQuantify}"  autofocus="false" placeholder="Ürün Ölçüsü" id="productQuantify" name="productQuantify"/>
+        <div class="text-danger" th:if="${#fields.hasErrors('productQuantify')}" th:errors="*{productQuantify}"></div>
     </div>
 
-    <div class="form-group mb-4">
-        <label for="customerPassword">Müşteri Şifreniz</label>
-        <input type="text" class="form-control" th:field="*{customerPassword}" autofocus="false" placeholder="Müşteri Şifreniz " id="customerPassword" name="customerPassword"/>
-        <div class="text-danger" th:if="${#fields.hasErrors('customerPassword')}" th:errors="*{customerPassword}"></div>
-    </div>
 
     <div class="form-group mb-4 mt-3">
         <input type="reset" class="btn btn-danger" value="Temizle"/>
         <input type="submit" class="btn btn-primary" value="Gönder"/>
-        <a th:href="@{/customer/mvc/v1/list}" class="btn btn-warning">Customer List</a>
+        <a th:href="@{/product/mvc/v1/list}" class="btn btn-warning">product List</a>
     </div>
 </form>
 
